Coder extends Agent